--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -5,6 +5,8 @@
   padding: 96px 80px;
   gap: 96px;
 
+  background-color: $content-color-light-1;
+
   .aboutus {
     display: flex;
     flex-direction: row;
