--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,13 @@
 body {
   color: #3c5e39;
   font-family: "Aileron", sans-serif;
+  font-weight: 400;
 }
 
 .container {
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 733px 589px 1021px 807px 129px 1290px;
+  grid-template-rows: 733px 589px 1021px 807px 129px 1290px 529px 677px 434px 214px;
   max-width: 1440px;
 }
 
@@ -27,6 +28,7 @@ body {
   align-items: flex-start;
   padding: 96px 80px;
   gap: 96px;
+  background-color: #f2f6ef;
 }
 .aboutus-company .aboutus {
   display: flex;
@@ -42,7 +44,7 @@ body {
 }
 .aboutus-company .aboutus .headline__title {
   font-size: 28px;
-  color: #899f8f;
+  color: #899f87;
   width: 100%;
   max-width: 616px;
 }
@@ -89,14 +91,138 @@ body {
   width: 1280px;
 }
 
-.all-product {
+.all-products {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
   padding: 96px 80px;
   gap: 89px;
-  border-bottom: 1px solid #c8d8c0;
+  background-color: #f2f6ef;
+}
+.all-products__left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
+  width: 532px;
+  height: 613px;
+}
+.all-products .headline {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.all-products .headline-title {
+  font-family: "Aileron", sans-serif;
+  font-size: 28px;
+  font-weight: 300;
+  color: #899f87;
+}
+.all-products .headline-subtitle {
+  font-family: "IvyMode", sans-serif;
+  font-size: 56px;
+  font-weight: 300;
+  color: #213721;
+}
+.all-products .listing-categories {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  width: 532px;
+  height: 392px;
+}
+.all-products .listing-categories__row {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 16px;
+}
+.all-products__right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 42px;
+  width: 650px;
+  height: 1098px;
+}
+.all-products .product-row {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 40px;
+  width: 650px;
+  height: 481px;
+}
+.all-products .product-card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 305px;
+  height: 481px;
+  border: 1px solid #c8d8c0;
+}
+.all-products .product__image {
+  width: 305px;
+  height: 320px;
+}
+.all-products .product__desc {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 24px;
+  gap: 10px;
+  width: 305px;
+  height: 161px;
+  border-top: 1px solid #c8d8c0;
+}
+.all-products .product__title {
+  font-family: "Aileron", sans-serif;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 140%;
+  color: #213721;
+}
+.all-products .product__price {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 140%;
+  color: #213721;
+}
+.all-products .rating2 {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  align-items: center;
+}
+.all-products .ratings_number {
+  font-family: "Aileron", sans-serif;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 140%;
+  color: #3c5e39;
+}
+.all-products .shop-cta {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 32px;
+  gap: 10px;
+  max-width: max-content;
+  height: 52px;
+  border: 1px solid #213721;
+  text-decoration: none;
+}
+.all-products .shop-cta__text {
+  color: #213721;
+  line-height: 140%;
+}
+.all-products .shop-cta__icon {
+  width: 30.11px;
+  height: 18.47px;
 }
 
 .cta {
@@ -105,7 +231,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 40px 80px;
-  background: #899f8f;
+  background: #899f87;
 }
 .cta__title {
   font-size: 40px;
@@ -118,11 +244,215 @@ body {
   height: 40.1px;
 }
 
+.cta02 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 96px 80px;
+  gap: 92px;
+  width: 1440px;
+  height: 434px;
+  background-color: #f2f6ef;
+}
+.cta02__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  gap: 32px;
+  width: 303.33px;
+  height: 242px;
+}
+.cta02 .head-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  width: max-content;
+  height: 68px;
+}
+
+.cta02__subtitle {
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 140%;
+  color: #899f87;
+}
+
+.shop-cta {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 32px;
+  gap: 10px;
+  max-width: max-content;
+  height: 52px;
+  border: 1px solid #213721;
+  text-decoration: none;
+}
+.shop-cta__text {
+  color: #213721;
+}
+
+.cta02__separator {
+  width: 1px;
+  height: 88px;
+  background: #d9d9d9;
+}
+
+.newsletter-cta {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 80px;
+  background: #899f87;
+}
+.newsletter-cta__title {
+  font-size: 56px;
+  color: #f2f6ef;
+  width: max-content;
+}
+.newsletter-cta__form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 537.84px;
+  height: 72px;
+  color: #899f87;
+}
+.newsletter-cta__input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px 24px;
+  gap: 10px;
+  width: 450px;
+  height: 72px;
+  background: #ffffff;
+  border: 1px solid #c8d8c0;
+  font-size: 20px;
+  letter-spacing: 1%;
+}
+.newsletter-cta__button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  gap: 10px;
+  width: 87.84px;
+  height: 72px;
+  background: #ffffff;
+  border-width: 1px 1px 1px 0px;
+  border-style: solid;
+  border-color: #c8d8c0;
+}
+.newsletter-cta__button .arrow-cta {
+  width: 47.84px;
+  height: 29px;
+}
+
+.testimonials {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 46px 80px;
+  gap: 10px;
+  position: relative;
+  width: 1440px;
+  height: 677px;
+  background-color: #f2f6ef;
+  border-bottom: 1px solid #c8d8c0;
+}
+.testimonials__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 80px;
+  width: 794px;
+  height: 481px;
+}
+.testimonials__content--title {
+  color: #899f87;
+}
+.testimonials__content--text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  width: 794px;
+  height: 370px;
+}
+.testimonials__text {
+  width: 740px;
+  padding-right: 28.89px;
+}
+.testimonials__rating {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  padding: 0px;
+  gap: 14px;
+  width: 246px;
+  height: 38px;
+}
+.testimonials__rating .starsvg {
+  width: 38px;
+  height: 38px;
+}
+.testimonials__author {
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 140%;
+  letter-spacing: 2%;
+  color: #c7d1c6;
+  font-style: italic;
+}
+.testimonials__slider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  gap: 24px;
+  width: 30.11px;
+  height: 131.58px;
+  left: 1329.89px;
+  top: calc(50% - 65.79px + 0.29px);
+  position: absolute;
+}
+.testimonials__slider .arrow {
+  width: 30.11px;
+  height: 18.47px;
+}
+.testimonials__slider .arrow--left {
+  transform: rotate(180deg);
+}
+.testimonials__slider .dot {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+.testimonials__slider .dot span {
+  width: 4px;
+  height: 4px;
+  transform: rotate(45deg);
+  background-color: #213721;
+}
+
 .featured {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 0px;
+  background-color: #f2f6ef;
 }
 .featured__header {
   display: flex;
@@ -134,7 +464,7 @@ body {
   border-top: 1px solid #c8d8c0;
 }
 .featured__subtitle {
-  color: #899f8f;
+  color: #899f87;
 }
 .featured__title {
   text-align: center;
@@ -150,6 +480,7 @@ body {
   border-width: 1px 0px;
   border-style: solid;
   border-color: #c8d8c0;
+  z-index: 1;
 }
 .featured__products .product-card {
   display: flex;
@@ -226,15 +557,98 @@ body {
   border-color: #c8d8c0;
 }
 
-.hero {
-  background-color: #899f8f;
+.footer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 533px;
+  background: #f2f6ef;
+}
+.footer__top {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  height: auto;
+  width: 100%;
+}
+.footer__column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 56px 40px;
+  gap: 24px;
+  width: 100%;
+  max-width: 360px;
+  height: 468px;
+  background: #f2f6ef;
+  border-width: 0px 1px;
+  border-style: solid;
+  border-color: #c8d8c0;
+}
+.footer__brand {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 64px 0px 0px;
+  width: 100%;
+  max-width: 323px;
+  height: 468px;
+  background: #f2f6ef;
+}
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 14px;
+  width: 190px;
+  height: 301px;
+}
+.footer__credit {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px 0px;
+  gap: 35px;
+  width: 202px;
+  height: 37px;
+  transform: rotate(90deg);
+}
+.footer__bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 80px;
+  width: 100%;
+  height: 65px;
+  background: #f2f6ef;
+  border-top: 1px solid #c8d8c0;
+}
+.footer__links {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 40px;
+  margin: 0 auto;
+  width: 261px;
+  height: 25px;
+}
+
+.hero {
+  background-color: #899f87;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: relative;
 }
 .hero__content {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 710px 730px;
   grid-template-rows: 733px;
   margin-top: -84px;
   align-items: center;
@@ -398,6 +812,72 @@ body {
   font-style: normal;
 }
 
+.try-service {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 96px 211px;
+  gap: 10px;
+  position: relative;
+  background-color: #f2f6ef;
+  border-bottom: 1px solid #c8d8c0;
+  border-top: 1px solid #c8d8c0;
+}
+.try-service__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 32px;
+  width: 519px;
+  height: 337px;
+}
+.try-service__content--headline {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.try-service__content--pretitle {
+  font-size: 28px;
+  font-weight: 300;
+  color: #899f87;
+}
+.try-service__content--title {
+  font-size: 56px;
+  font-weight: 300;
+  color: #213721;
+}
+.try-service__content--subtitle {
+  font-size: 20px;
+  font-weight: 300;
+  color: #3c5e39;
+}
+.try-service__content .shop-cta {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 32px;
+  gap: 10px;
+  max-width: max-content;
+  height: 52px;
+  border: 1px solid #213721;
+  text-decoration: none;
+}
+.try-service__content .shop-cta__text {
+  color: #213721;
+}
+.try-service__image {
+  position: absolute;
+  width: 348px;
+  height: 434.7px;
+  left: 181px;
+  top: calc(50% - 217.35px + 12.85px);
+  order: 1;
+}
+
 h1 {
   font-family: "IvyMode", sans-serif;
   font-weight: 300;
@@ -411,6 +891,24 @@ h2 {
   font-style: light;
   line-height: 120%;
   letter-spacing: 1%;
+}
+
+h3 {
+  font-family: "IvyMode", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.04em;
+  color: #213721;
+}
+
+h5 {
+  font-family: "IvyMode", sans-serif;
+  font-weight: 300;
+  font-size: 30px;
+  line-height: 120%;
+  color: #213721;
 }
 
 h6 {
@@ -440,6 +938,34 @@ h6 {
 }
 .btn:hover {
   background-color: #c7d1c6;
+}
+
+.btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 26px;
+  gap: 10px;
+  width: max-content;
+  height: 52px;
+  border: 1px solid #c8d8c0;
+  border-radius: 40px;
+  background-color: #f2f6ef;
+}
+
+.active-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 26px;
+  gap: 10px;
+  width: max-content;
+  height: 52px;
+  border: 1px solid #c8d8c0;
+  border-radius: 40px;
+  background-color: #e4ece0;
 }
 
 /*# sourceMappingURL=style.css.map */
