--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -13,6 +13,24 @@ h2 {
   letter-spacing: 1%;
 }
 
+h3 {
+  font-family: $font-primary;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.04em;
+  color: $content-color-dark-2;
+}
+
+h5 {
+  font-family: $font-primary;
+  font-weight: 300;
+  font-size: 30px;
+  line-height: 120%;
+  color: $content-color-dark-2;
+}
+
 h6 {
   font-family: Aileron;
   font-weight: 300;
@@ -42,4 +60,38 @@ h6 {
   &:hover {
     background-color: $content-color-light-2;
   }
+}
+
+.btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 26px;
+  gap: 10px;
+
+  width: max-content;
+  height: 52px;
+
+  border: 1px solid $color-primary;
+  border-radius: 40px;
+
+  background-color: $content-color-light-1;
+}
+
+.active-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 26px;
+  gap: 10px;
+
+  width: max-content;
+  height: 52px;
+
+  border: 1px solid $color-primary;
+  border-radius: 40px;
+
+  background-color: $color-primary-light;
 }
