--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "about";
 @import "allproduct";
 @import "cta";
+@import "testimonials";
 @import "featured";
 @import "footer";
 @import "hero";
